--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                 <p>Рекомендуемая доза: -1 стресс, -1 тьма. Все препараты занимают 2 временных слота.</p>
 
                 <article>
-                    <img src="./imgs/staff/Depaz.png" alt="Depaz">
+                    <img src="./imgs/staff/Depaz.png" alt="Depaz" height="80">
                     <div>
                         <h3>Depaz</h3>
                         <p>Доступен с самого начала игры.</p>
@@ -111,7 +111,7 @@
                 </article>
 
                 <article>
-                    <img src="./imgs/staff/Dylsem.png" alt="Dylsem">
+                    <img src="./imgs/staff/Dylsem.png" alt="Dylsem" height="80">
                     <div>
                         <h3>Dylsem</h3>
                         <p>Открывается при 20 Ментальной Тьмы.</p>
@@ -148,7 +148,7 @@
                 </article>
 
                 <article>
-                    <img src="./imgs/staff/Embian.png" alt="Embian">
+                    <img src="./imgs/staff/Embian.png" alt="Embian" height="80">
                     <div>
                         <h3>Embian</h3>
                         <p>Открывается при 40 Ментальной Тьмы. Нет обычной дозы — любое потребление дает эффекты
@@ -181,7 +181,7 @@
                 </article>
 
                 <article>
-                    <img src="./imgs/staff/Magic Grass.png" alt="Magic Grass">
+                    <img src="./imgs/staff/Magic Grass.png" alt="Magic Grass" height="80">
                     <div>
                         <h3>Magic Grass</h3>
                         <p>Открывается при 60 Ментальной Тьмы. Нет обычной дозы — любое потребление дает усиленные
